# meruchajinem_rikilal

./: .gitignore  données.py  principale.py  pyproject.toml
més/: contexte.py  données.py  modèle.py
més/variables/: __init__.py  catégorique.py  continues.py  discrètes.py  groupes.py  relation.py  variable.py
