[tool.poetry]
name = "runuk"
version = "0.1.0"
description = ""
authors = ["julienmalard <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
pymc = "^5.5.0"
numpy = "^1.24.3"
arviz = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
